# segway_v3_robot

./: README.md
segway_bringup/: CMakeLists.txt  package.xml
segway_bringup/env-hooks/: 50.segway_config.sh
segway_bringup/launch/: stanley_innovation_system.launch  stanley_innovation_system_sim.launch
segway_bringup/launch/localization/: segway_odometry.launch
segway_bringup/launch/localization/config/: base_platform_localization_params.yaml  gps_global_localization_params.yaml  gps_localization_params.yaml
segway_bringup/launch/platform/: segway.launch
segway_bringup/launch/sensors/: segway_sensors.launch
segway_bringup/launch/sensors/config/: laser_unifier.yaml
segway_bringup/launch/sensors/config/RMP_440LE/: hokuyo_scan_filter.yaml
segway_bringup/launch/sensors/config/RMP_OMNI/: 2d_scan_filter.yaml
segway_bringup/launch/teleop/: segway_teleop.launch
segway_bringup/launch/teleop/config/: cmd_vel_mux.yaml
segway_sensor_filters/but_velodyne/but_velodyne_proc/: CMakeLists.txt
segway_sensor_filters/but_velodyne/but_velodyne_proc/src/: ground_map_nodelet.cpp  laser_scan_nodelet.cpp
segway_sensor_filters/cob_scan_unifier/include/cob_scan_unifier/: scan_unifier_node.h
segway_sensor_filters/cob_scan_unifier/src/: scan_unifier_node.cpp
segway_sensor_filters/range_sensor_filters/: package.xml
segway_upstart/templates/: job-start.em
third_party_sensors/nmea_comms/src/: serial_node.cpp
third_party_sensors/velodyne/velodyne_driver/launch/: nodelet_manager.launch
third_party_sensors/velodyne/velodyne_pointcloud/: CMakeLists.txt
(+6 files in other folders)
